--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
     <!-- Pairing -->
     <string name="pair_robot">Pair Robot</string>
     <string name="scan_devices">Scan for Devices</string>
+    <string name="scan_bluetooth">Scan Bluetooth</string>
+    <string name="scan_wifi">Scan WiFi</string>
+    <string name="scanning_bluetooth">Scanning for Bluetooth devices...</string>
+    <string name="scanning_wifi">Scanning for WiFi networks...</string>
     <string name="ready_to_scan">Ready to scan</string>
     <string name="scanning">Scanning for devices...</string>
     <string name="scan_complete">Scan complete</string>
