Refactor UI layout for Robot Control and Settings screens; enhance servo control commands in Arduino code
- Updated layout files for `activity_robot_control.xml` and `activity_settings.xml` to improve UI consistency and usability.
- Replaced hardcoded dimensions with dimension resources for better scalability.
- Introduced CardViews for better visual separation of sections in the Robot Control UI.
- Enhanced the Servo Control section with improved layout and styling.
- Added new TextViews in Settings to display connection type and IP address.
- Modified string resources for clarity and consistency.
- Implemented new command handling in Arduino code for manual servo control via Bluetooth, allowing for dynamic angle setting.

--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -68,7 +68,8 @@
     <string name="robot_info">Robot Information</string>
     <string name="name">Name</string>
     <string name="type">Type</string>
-    <string name="mac_address">MAC Address</string>
+    <string name="mac_address">Address</string>
+    <string name="ip_address">IP Address</string>
     <string name="permissions">Permissions</string>
     <string name="add_permission">Add Permission</string>
     <string name="revoke_permission">Revoke Permission</string>
