--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -65,6 +65,15 @@
     
     <!-- Settings -->
     <string name="robot_settings">Robot Settings</string>
+
+    <!-- App Settings -->
+    <string name="app_settings">App Settings</string>
+    <string name="pref_category_general">General</string>
+    <string name="pref_theme_title">Theme</string>
+    <string name="pref_theme_summary">Choose light, dark, or system default</string>
+    <string name="pref_theme_system">System default</string>
+    <string name="pref_theme_light">Light</string>
+    <string name="pref_theme_dark">Dark</string>
     <string name="robot_info">Robot Information</string>
     <string name="name">Name</string>
     <string name="type">Type</string>
