--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -60,6 +60,79 @@
     <string name="last_connected">Last Connected</string>
     <string name="login_subtitle">Connect and Control Your Robot Fleet</string>
 
+    <!-- Dashboard / Home -->
+    <string name="dashboard_welcome_default">Welcome to RoboConnect!</string>
+    <string name="dashboard_tagline">Control your robot and learn robotics</string>
+    <string name="dashboard_quick_connect">Quick Connect</string>
+    <string name="dashboard_pair_with_robot">Pair with your robot</string>
+    <string name="dashboard_features">Features</string>
+    <string name="dashboard_manage_robots">Manage your robots</string>
+    <string name="dashboard_learn_robotics">Learn Robotics</string>
+    <string name="dashboard_education_desc">Educational content &amp; quizzes</string>
+    <string name="dashboard_settings">Settings</string>
+    <string name="dashboard_settings_desc">App preferences and permissions</string>
+    <string name="dashboard_get_started">Get Started</string>
+
+    <!-- Quiz -->
+    <string name="quiz_title">Quiz Time</string>
+    <string name="quiz_label_question">Question</string>
+    <string name="quiz_select_answer">Select your answer:</string>
+    <string name="quiz_option_1">Option 1</string>
+    <string name="quiz_option_2">Option 2</string>
+    <string name="quiz_option_3">Option 3</string>
+    <string name="quiz_option_4">Option 4</string>
+    <string name="quiz_submit">Submit Answer</string>
+    <string name="quiz_next">Next Question</string>
+    <string name="quiz_toast_select_answer">Please select an answer</string>
+    <string name="quiz_toast_correct">Correct!</string>
+    <string name="quiz_toast_wrong">Wrong! Correct answer: %1$s</string>
+
+    <string name="quiz_complete_format" translatable="false">Quiz Complete!\n\nYour Score: %1$d/%2$d</string>
+    <string name="quiz_data_invalid" translatable="false">Quiz data is invalid. Please update the questions/options.</string>
+
+    <!-- Common UI -->
+    <string name="command_none">Command: (none yet)</string>
+    <string name="motor_control">Motor Control</string>
+    <string name="servo_control">Servo Control</string>
+
+    <!-- WiFi control screen -->
+    <string name="robot_control_title">Robot Control</string>
+    <string name="robot_wifi_control_label">Robot WiFi Control</string>
+    <string name="wifi_connection">Connection</string>
+    <string name="wifi_scan_for_robots">Scan for robots</string>
+    <string name="status_disconnected_label">Status: Disconnected</string>
+
+    <!-- Pairing -->
+    <string name="available_devices">Available Devices</string>
+
+    <!-- Education -->
+    <string name="education_activity_label">Learn Robotics</string>
+    <string name="education_hub_title" translatable="false">Education Hub</string>
+    <string name="education_subtitle">Master the fundamentals of robotics and electronics</string>
+
+    <string name="education_tab_electricity">Electricity</string>
+    <string name="education_tab_circuits">Circuits</string>
+    <string name="education_tab_mechatronics">Mechatronics</string>
+    <string name="education_tab_quiz">Quiz</string>
+
+    <string name="education_electricity_content">Learn about: Voltage and Current; Ohm\'s Law (V = I x R); Power Calculations; Series and Parallel Circuits; Basic Electrical Safety.</string>
+    <string name="education_circuits_content">Learn about: Circuit Components (Resistors, Capacitors, LEDs); Breadboard Basics; Reading Circuit Diagrams; Building Simple Circuits; Arduino/Microcontroller Basics; Digital vs Analog Signals.</string>
+    <string name="education_mechatronics_content">Learn about: Servo Motors and Control; DC Motors and Motor Drivers; Sensors (Ultrasonic, IR, Temperature); PWM (Pulse Width Modulation); Robot Kinematics; Bluetooth/WiFi Communication; Robot Assembly and Design.</string>
+
+    <!-- Toasts / messages -->
+    <string name="toast_login_success">Login successful</string>
+    <string name="toast_login_invalid">Invalid email or password</string>
+    <string name="toast_user_exists">User already exists with this email</string>
+    <string name="toast_registration_success">Registration successful</string>
+    <string name="toast_registration_failed">Registration failed</string>
+    <string name="toast_password_reset_unavailable">Password reset is not available in offline mode</string>
+
+    <!-- Validation errors -->
+    <string name="error_email_required">Email is required</string>
+    <string name="error_password_required">Password is required</string>
+    <string name="error_password_min_length">Password must be at least 6 characters</string>
+    <string name="error_enter_email_first">Enter your email first</string>
+
     <!-- Bluetooth Serial Commands (Servo Robot) -->
     <string name="test_servos">Test Servos</string>
     
@@ -69,6 +142,13 @@
     <!-- App Settings -->
     <string name="app_settings">App Settings</string>
     <string name="pref_category_general">General</string>
+
+    <string name="pref_language_title">Language</string>
+    <string name="pref_language_summary">Choose the app language</string>
+    <string name="pref_language_english">English</string>
+    <string name="pref_language_french">French</string>
+    <string name="pref_language_spanish">Spanish</string>
+
     <string name="pref_theme_title">Theme</string>
     <string name="pref_theme_summary">Choose light, dark, or system default</string>
     <string name="pref_theme_system">System default</string>
