--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -154,6 +154,12 @@
     <string name="pref_theme_system">System default</string>
     <string name="pref_theme_light">Light</string>
     <string name="pref_theme_dark">Dark</string>
+    
+    <string name="pref_color_theme_title">Color Theme</string>
+    <string name="pref_color_theme_summary">Choose your preferred color scheme</string>
+    <string name="pref_color_theme_default">Default Blue</string>
+    <string name="pref_color_theme_pink">Pink</string>
+    <string name="pref_color_theme_brown">Brown</string>
     <string name="robot_info">Robot Information</string>
     <string name="name">Name</string>
     <string name="type">Type</string>
