--- a/RobotControl/app/src/main/res/values-es/strings.xml
+++ b/RobotControl/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">RoboConnect</string>
     <string name="app_title">RoboConnect</string>
     <string name="app_subtitle">Gestión centralizada de flota robótica</string>
+    <string name="view_all">Ver todo</string>
 
     <!-- Login -->
     <string name="email">Correo electrónico</string>
