--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="dashboard_settings">Settings</string>
     <string name="dashboard_settings_desc">App preferences and permissions</string>
     <string name="dashboard_get_started">Get Started</string>
+    <string name="view_all">View all</string>
 
     <!-- Quiz -->
     <string name="quiz_title">Quiz Time</string>
