--- a/RobotControl/app/src/main/res/values/strings.xml
+++ b/RobotControl/app/src/main/res/values/strings.xml
@@ -127,6 +127,8 @@
     <string name="robotics_game_title">Robot Path Planner</string>
     <string name="robotics_game_card_desc">Program moves to reach the goal</string>
     <string name="robotics_game_subtitle">Build a short command program to move the robot from S to G without hitting obstacles.</string>
+    <string name="robotics_game_how_to_play_title">How to play</string>
+    <string name="robotics_game_how_to_play">1) Look at the grid: S = start, G = goal, R = robot.\n2) Tap Left / Forward / Right to build a program (a list of moves).\n   • Left/Right rotate the robot.\n   • Forward moves 1 cell in the direction the robot is facing.\n3) Tap Run to execute the program step-by-step.\n4) If you hit the edge of the grid, tap Reset and try again.\n\nSolution (easy level):\nForward, Forward, Forward, Right, Forward, Forward, Forward</string>
     <string name="robotics_game_legend">Legend: S = Start, G = Goal, R = Robot, # = Obstacle</string>
     <string name="robotics_game_commands">Commands</string>
     <string name="robotics_game_left">Left</string>
@@ -141,6 +143,33 @@
     <string name="robotics_game_finished_not_goal">Program finished. Not at the goal yet.</string>
     <string name="robotics_game_success">Success! You reached the goal.</string>
     <string name="robotics_game_too_long">Program too long (max %1$d moves)</string>
+
+    <!-- Circuit builder mini-game -->
+    <string name="circuit_builder_title">Circuit Builder</string>
+    <string name="circuit_builder_card_desc">Drag parts to light the LED</string>
+    <string name="circuit_builder_subtitle">Drag Battery, Switch, Resistor, and LED into the slots to build a safe series circuit.</string>
+    <string name="circuit_builder_how_to_play">How it works:\n• Long-press a part to start dragging.\n• Drop it into one of the 4 slots (left → right).\n• Tap the Switch slot to open/close it.\n• Tap the LED slot to flip polarity (→ / ←).\n\nGoal (solution order): Battery, Switch (closed), Resistor, LED (→)</string>
+    <string name="circuit_builder_slots_title">Circuit slots</string>
+    <string name="circuit_builder_parts_title">Parts (long-press to drag)</string>
+    <string name="circuit_builder_clear">Clear circuit</string>
+
+    <string name="circuit_builder_part_battery">Battery</string>
+    <string name="circuit_builder_part_switch">Switch</string>
+    <string name="circuit_builder_part_resistor">Resistor</string>
+    <string name="circuit_builder_part_led">LED</string>
+
+    <string name="circuit_builder_part_battery_short">BATT</string>
+    <string name="circuit_builder_part_resistor_short">R</string>
+    <string name="circuit_builder_switch_closed">SW (closed)</string>
+    <string name="circuit_builder_switch_open">SW (open)</string>
+    <string name="circuit_builder_led_forward">LED →</string>
+    <string name="circuit_builder_led_backward">LED ←</string>
+    <string name="circuit_builder_slot_empty">Drop</string>
+
+    <string name="circuit_builder_led_on">LED: ON</string>
+    <string name="circuit_builder_led_off">LED: OFF</string>
+    <string name="circuit_builder_hint">Hint: You need a resistor and correct LED polarity.</string>
+    <string name="circuit_builder_hint_on">Nice! This is a safe series circuit.</string>
 
     <string name="education_electricity_content">Electricity fundamentals\n\n• Voltage (V): “electrical pressure” that pushes charge.\n• Current (I): flow of charge (Amps).\n• Resistance (R): how much a material/component resists current (Ohms).\n\nKey laws &amp; formulas\n• Ohm\'s Law: V = I × R\n• Power: P = V × I\n• Energy (battery life): Wh ≈ V × Ah\n\nSeries vs parallel\n• Series: same current, voltages add up across components.\n• Parallel: same voltage, currents add up in branches.\n\nSafety basics\n• Always use a resistor with LEDs.\n• Disconnect power before rewiring.\n• Check polarity on batteries, LEDs, and electrolytic capacitors.</string>
     <string name="education_circuits_content">Circuits &amp; electronics basics\n\nCore components\n• Resistor: limits current / sets voltage dividers.\n• Capacitor: smooths noise, stores charge briefly.\n• Diode/LED: allows current one way (LED also emits light).\n• Transistor/MOSFET: electronic switch to control motors/LEDs.\n\nBreadboard basics\n• Middle area: connected rows for building circuits.\n• Side rails: usually power (VCC) and ground (GND).\n\nReading diagrams\n• Symbols represent parts; wires show connections.\n• Ground symbols mean “same reference point.”\n\nArduino essentials\n• Digital vs analog: digital is HIGH/LOW; analog reads a range.\n• PWM is used to control brightness/motor speed.\n• Always share GND between Arduino and external power sources.</string>
